<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/music_background"
    android:orientation="vertical" >
    
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:background="@color/holo_blue_light"
            android:orientation="horizontal" >

            <!-- 返回 -->

            <ImageButton
                android:id="@+id/system_backBtn"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_centerVertical="true"
                android:background="@drawable/selector_music_btn"
                android:padding="10dip"
                android:src="@drawable/icon_back" />
            <!-- 设置 -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/version_info"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </RelativeLayout>
        
        <RelativeLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
            <ImageView 
                android:id="@+id/banben"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_centerInParent="true"
                android:background="@drawable/ic_launcher1"
                />
       </RelativeLayout>
       <RelativeLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView 
                android:id="@+id/edition_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
               
                android:text="@string/edition_number"/>
        </RelativeLayout>
        <View 
            android:layout_width="match_parent"
        	android:layout_height="10dp" />
        <View 
            android:layout_width="match_parent"
        	android:layout_height="1dp"
        	android:background="@drawable/jiange1" /> 
       
       <LinearLayout 
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:background="@null"       
           android:layout_marginLeft="10dp"
           android:layout_marginRight="10dp"
           android:orientation="vertical">
           
           <TextView 
               android:id="@+id/gengxin"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginLeft="5dp"
               android:layout_marginTop="10dp"
               android:layout_marginBottom="10dp"
               android:gravity="center"
               android:textColor="#ffffffff"
               android:text="@string/gengxin"
               android:textSize="20dp"/>
            
       </LinearLayout>
    
       <View 
            android:layout_width="match_parent"
        	android:layout_height="1dp"
        	android:background="@drawable/jiange1" /> 
       
        <LinearLayout 
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:background="@null"
           android:layout_marginLeft="10dp"
           android:layout_marginRight="10dp"
           android:orientation="vertical">
           
           <TextView 
               android:id="@+id/pingjia"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginLeft="5dp"
               android:layout_marginTop="10dp"
               android:layout_marginBottom="10dp"
               android:gravity="center"
               android:textColor="#ffffffff"
               android:text="@string/pingjia"
               android:textSize="20dp"/>
            
       </LinearLayout>
       
        <View 
            android:layout_width="match_parent"
        	android:layout_height="1dp"
        	android:background="@drawable/jiange1" /> 
        
        <LinearLayout 
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:background="@null"
           android:layout_marginLeft="10dp"
           android:layout_marginRight="10dp"
           android:orientation="vertical">
           
           <TextView 
               android:id="@+id/welcome"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginLeft="5dp"
               android:layout_marginTop="10dp"
               android:layout_marginBottom="10dp"
               android:gravity="center"
               android:textColor="#ffffffff"
               android:text="@string/welcome"
               android:textSize="20dp"/>
           
       </LinearLayout>
       
        <View 
            android:layout_width="match_parent"
        	android:layout_height="1dp"
        	android:background="@drawable/jiange1" /> 
        
        <LinearLayout 
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:background="@null"
           android:layout_marginLeft="10dp"
           android:layout_marginRight="10dp"
           android:orientation="vertical">
           
           <TextView 
               android:id="@+id/contact"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginLeft="5dp"
               android:layout_marginTop="10dp"
               android:layout_marginBottom="10dp"
               android:gravity="center"
               android:textColor="#ffffffff"
               android:text="@string/contact"
               android:textSize="20dp"/>
           
       </LinearLayout>
       
        <View 
            android:layout_width="match_parent"
        	android:layout_height="1dp"
        	android:background="@drawable/jiange1" /> 
        
        <LinearLayout 
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:background="@null"
           android:layout_marginLeft="10dp"
           android:layout_marginRight="10dp"
           android:orientation="vertical">
           
           <TextView 
               android:id="@+id/team"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginLeft="5dp"
               android:layout_marginTop="10dp"
               android:layout_marginBottom="10dp"
               android:gravity="center"
               android:textColor="#ffffffff"
               android:text="@string/team"
               android:textSize="20dp"/>
           
       </LinearLayout>
        <View 
            android:layout_width="match_parent"
        	android:layout_height="1dp"
        	android:background="@drawable/jiange1" />  
    
</LinearLayout>
