<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/music_background"
    >
    
            <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:background="@color/holo_blue_light"
            android:orientation="horizontal" >

            <!-- 返回 -->

            <ImageButton
                android:id="@+id/sleep_backBtn"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_centerVertical="true"
                android:background="@drawable/selector_music_btn"
                android:padding="10dip"
                android:src="@drawable/icon_back" />
            <!-- 设置 -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/at_time_tip"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:layout_width="91dp"
                    android:layout_height="131dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/sleep_image" />

                
            </RelativeLayout>
            
        <LinearLayout 
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/hengtiao" >
       
       <EditText
           android:id="@+id/EditText01"
           android:layout_width="fill_parent"
           android:layout_height="match_parent"
           android:background="@null"
           android:layout_marginLeft="20dp"
           android:text="" 
           android:hint="@string/please_input_thing"/>
        </LinearLayout>
     <RelativeLayout 
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    >
	<Button
	    android:id="@+id/Button01"
	    android:layout_width="120dp"
	    android:layout_height="50dp"
	    android:layout_centerInParent="true"
	    android:background="@null"
	    android:text="@string/set_tip_time"
	    android:textSize="20dp" />
	</RelativeLayout>
	
	<TextView
	    android:id="@+id/TextView01"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="" >

	</TextView>
	
	
</LinearLayout>
